@@ -155,3 +155,30 @@ Test inv geos on a ellipsoid with alternate sweep
 -3779077.27 -2327750.87	43d11'47"W	22d54'30"S 0.000
 1605067.15 -3400461.47	18d25'26"E	33d55'31"S 0.000
 3820138.08 2888664.15	47d58'42"E	29d22'11"N 0.000
+##############################################################
+Test the natural earth projection
+0.0 0.0 0	0.0000000	0.0000000 0.0000000 0.0 0.0
+0.0 22.5 0	0.0000000	2525419.5693838 0.0000000 0.0 2525419.569383768
+0.0 45.0 0	0.0000000	5052537.3899732 0.0000000 0.0 5052537.389973222
+0.0 67.5 0	0.0000000	7400065.6562574 0.0000000 0.0 7400065.6562573705
+0.0 90.0 0	0.0000000	9062062.3947367 0.0000000 0.0 9062062.394736718
+45.0 0.0 0	4356790.0166122	0.0000000 0.0000000 4356790.016612169 0.0
+45.0 22.5 0	4253309.5449841	2525419.5693838 0.0000000 4253309.544984069 2525419.569383768
+45.0 45.0 0	3924521.5829515	5052537.3899732 0.0000000 3924521.5829515466 5052537.389973222
+45.0 67.5 0	3354937.4711558	7400065.6562574 0.0000000 3354937.47115583 7400065.6562573705
+45.0 90.0 0	2397978.2448444	9062062.3947367 0.0000000 2397978.2448443635 9062062.394736718
+90.0 0.0 0	8713580.0332243	0.0000000 0.0000000 8713580.033224339 0.0
+90.0 22.5 0	8506619.0899681	2525419.5693838 0.0000000 8506619.089968137 2525419.569383768
+90.0 45.0 0	7849043.1659031	5052537.3899732 0.0000000 7849043.165903093 5052537.389973222
+90.0 67.5 0	6709874.9423117	7400065.6562574 0.0000000 6709874.94231166 7400065.6562573705
+90.0 90.0 0	4795956.4896887	9062062.3947367 0.0000000 4795956.489688727 9062062.394736718
+135.0 0.0 0	13070370.0498365	0.0000000 0.0000000 1.3070370049836507E7 0.0
+135.0 22.5 0	12759928.6349522	2525419.5693838 0.0000000 1.2759928634952208E7 2525419.569383768
+135.0 45.0 0	11773564.7488546	5052537.3899732 0.0000000 1.177356474885464E7 5052537.389973222
+135.0 67.5 0	10064812.4134675	7400065.6562574 0.0000000 1.0064812413467491E7 7400065.6562573705
+135.0 90.0 0	7193934.7345331	9062062.3947367 0.0000000 7193934.734533091 9062062.394736718
+180.0 0.0 0	17427160.0664487	0.0000000 0.0000000 1.7427160066448677E7 0.0
+180.0 22.5 0	17013238.1799363	2525419.5693838 0.0000000 1.7013238179936275E7 2525419.569383768
+180.0 45.0 0	15698086.3318062	5052537.3899732 0.0000000 1.5698086331806187E7 5052537.389973222
+180.0 67.5 0	13419749.8846233	7400065.6562574 0.0000000 1.341974988462332E7 7400065.6562573705
+180.0 90.0 0	9591912.9793775	9062062.3947367 0.0000000 9591912.979377454 9062062.394736718
